@@ -21,8 +21,9 @@ glade_DATA = $(GLADE_FILES)
 install-exec-local:
 	mkdir -p $(DESTDIR)$(sbindir)/
 	install -m 0755 $(srcdir)/sabayon $(DESTDIR)$(sbindir)
-	install -m 0755 $(srcdir)/sabayon-monitor $(DESTDIR)$(sbindir)
-	install -m 0755 $(srcdir)/sabayon-session $(DESTDIR)$(sbindir)
+	mkdir -p $(DESTDIR)$(libexecdir)/
+	install -m 0755 $(srcdir)/sabayon-monitor $(DESTDIR)$(libexecdir)
+	install -m 0755 $(srcdir)/sabayon-session $(DESTDIR)$(libexecdir)
 	mkdir -p $(DESTDIR)$(pkgdatadir)/
 	for f in $(PYTHON_FILES); do \
 	  install -m 0644 $(srcdir)/$$f $(DESTDIR)$(pkgdatadir)/ ; \
@@ -32,9 +33,10 @@ uninstall-local:
 	rm -f $(DESTDIR)$(pkgdatadir)/*py
 	rmdir $(DESTDIR)$(pkgdatadir)/
 	rm -f $(DESTDIR)$(sbindir)/sabayon
-	rm -f $(DESTDIR)$(sbindir)/sabayon-monitor
-	rm -f $(DESTDIR)$(sbindir)/sabayon-session
+	rm -f $(DESTDIR)$(libexecdir)/sabayon-monitor
+	rm -f $(DESTDIR)$(libexecdir)/sabayon-session
 	rmdir $(DESTDIR)$(sbindir)/
+	rmdir $(DESTDIR)$(libexecdir)/
 
 pycheck:
 	pychecker -F $(top_srcdir)/pycheckrc $(PYTHON_FILES)
